--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Agregando una línea</h1>
     <h2>Este es el segundo cambio que realizo en mi página</h2>
     <h3>Ya voy entendiendo mejore esto, por ahora estoy trabajando en mi working directory</h3>
+    <h4>Cada cambio lo estoy guardando con un commit</h4>
+    <h1>Azul School es la onda</h1>
 </body>
 </html>
