--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <h3>Ya voy entendiendo mejore esto, por ahora estoy trabajando en mi working directory</h3>
     <h4>Cada cambio lo estoy guardando con un commit</h4>
     <h1>Azul School es la onda</h1>
+
+    <h1>About me</h2>
+    <h2>Hi! Welcome to my page </h2>
+    <h3>I'm <span>Jesica</span></h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rerum hic, incidunt quia sunt officia quas atque ratione! Velit quibusdam aut, pariatur quam delectus voluptates reprehenderit dolor in! Quisquam, voluptatibus?</p>
 </body>
 </html>
