--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <h3>Ya voy entendiendo mejore esto, por ahora estoy trabajando en mi working directory</h3>
     <h4>Cada cambio lo estoy guardando con un commit</h4>
     <h1>Azul School es la onda</h1>
+
+    <header>
+        <nav>
+            <u1 >
+                <li><a href="#">Home </a></li>
+                <li><a href="#">About me </a></li>
+                <li><a href="#">Contact </a></li>
+            </u1>
+        </nav>
+    </header>
 </body>
 </html>
