--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <h3>I'm <span>Jesica</span></h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rerum hic, incidunt quia sunt officia quas atque ratione! Velit quibusdam aut, pariatur quam delectus voluptates reprehenderit dolor in! Quisquam, voluptatibus?</p>
     </main>
+
+    <footer><a href="https://">Twitter</a> </footer>
 </body>
 </html>
