Modified footer HTML

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rerum hic, incidunt quia sunt officia quas atque ratione! Velit quibusdam aut, pariatur quam delectus voluptates reprehenderit dolor in! Quisquam, voluptatibus?</p>
     </main>
 
-    <footer><a href="https://">Twitter</a> </footer>
+    <footer>
+        <ul>
+            <li><a href="https://">Twitter</a></li>
+            <li><a href="https://">GitHub</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
