added food image

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     <h3>Ya voy entendiendo mejore esto, por ahora estoy trabajando en mi working directory</h3>
     <h4>Cada cambio lo estoy guardando con un commit</h4>
     <h1>Azul School es la onda</h1>
+
+<section>
+    <h3>Comida</h3>
+    <h4>Comida mexicana</h4>
+    <img src="https://cdn.pixabay.com/photo/2021/01/19/23/16/tacos-5932654_960_720.jpg" alt="Comida Mexicana">
+
+</section>
 </body>
 </html>
